data/Java/15-incomp-return-types/6/[M]Error.txt
https://stackoverflow.com/questions/43277464/error-incompatible-types-unexpected-return-value?rq=1
Student.java:44: error: incompatible types: unexpected return value
      return average;
             ^